[package]
name = "tokio_socket2"
version = "0.1.0"
edition = "2021"
description = "To make socket2 work with tokio."
repository = "https://github.com/Banyc/tokio_socket2"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
socket2 = "0.4.7"
tokio = { version = "1.21.2", features = ["full"] }
