[package]
name = "tokio_socket2"
version = "0.1.1"
edition = "2021"
description = "To make socket2 work with tokio."
repository = "https://github.com/Banyc/tokio_socket2"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
socket2 = "0.5.3"
tokio = { version = "1.30.0", features = ["io-util", "net"] }

[dev-dependencies]
tokio = { version = "1.30.0", features = ["full"] }
